<resources>
    <string name="app_name">To Do</string>
    <string name="to_do_list">To Do List</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="enter_your_task">enter your task</string>
    <string name="enter_task_description">enter task description</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select time</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_new_task">Add New Task</string>
    <string name="add_task_title">"please enter a title"</string>
    <string name="add_task_date">"please select a date "</string>
    <string name="add_task_time">"please select a time "</string>
    <string name="edit_task">Edit Task</string>
    <string name="save">Save Changes</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="select_mode">Select Mode</string>
    <string name="select_language">Select Language</string>
    <string name="language_set">Language set to English</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="modes">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

</resources>