<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:backgroundTint="@color/add_task_color"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    android:layout_margin="10dp"
    android:background="@drawable/add_task_borders"
    tools:context=".addTask">


    <View
        android:id="@+id/drag_bar"
        android:layout_width="120dp"
        android:layout_height="3dp"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/task_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_task"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_bar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_input"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="20sp"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_bar" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:hint="@string/select_date"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/description_input" />


    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:hint="@string/select_time"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/description_input"
        app:layout_constraintTop_toBottomOf="@+id/description_input" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/done"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:background="@drawable/adjust_check_button"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />



</androidx.constraintlayout.widget.ConstraintLayout>


    <!--




    -->